_sass/modules/_cards.scss
.cards {
  font-size: 0;
  line-height: 0;
  position: relative;

  .container {
    max-width: 1280px;

    // Override zero font-size for direct text content
    > h2,
    > p {
      font-size: 20px;
      line-height: 1.2;
      text-align: center;
      max-width: 80%;
      margin: 0 auto 2em;
      text-wrap: balance;
    }

    > h2 {
      font-size: 26px;
      line-height: 1.2;
    }
  }

  &__container {
    display: grid;
    gap: 30px 0;
    margin: 3px 30px;
    z-index: 1;

    &.card__fullwidth {
      grid-template-columns: 1fr;

      .card {
        max-height: auto !important;

        &__body {
          display: flex;
          flex-direction: column;
          text-align: left;

          img {
            border: 1px solid #ccc;
            width: 100%;
            margin: 1em;
            height: auto;
          }

          h3 {
            text-align: left;
          }

          p {
            margin-bottom: 1em;
            text-align: left;
          }

          ul {
            list-style-type: unset;
            padding: unset;
            margin: unset;
            padding-left: 1em;
          }
        }
      }
    }
  }

  .card {
    position: relative;

    a,
    &__body {
      width: 100%;
    }

    a {
      display: block;

      &:hover {
        .card__label h6 {
          background: $color-red;
        }

        .card__body {
          box-shadow:
            0 3px 15px 2px rgba($color-black, 0.05),
            0 1px 1px rgba($color-black, 0.02),
            0 0 0 3px $color-red;
          transform: translateY(-3px);
        }
      }
    }

    &__label {
      position: absolute;
      text-align: center;
      top: -15px;
      width: 100%;
      z-index: 1;

      h6 {
        background: $color-red;
        border-radius: 3px;
        color: $color-white;
        display: inline-block;
        font-size: 14px;
        font-weight: 600;
        letter-spacing: 0.1em;
        line-height: 21px;
        padding: 3px 23px 3px 13px;
        position: relative;
        text-transform: uppercase;
        transition: background $transition;

        &:after {
          background: url(../images/icon-card.svg) center center no-repeat;
          content: "";
          filter: $filter-white;
          height: 9px;
          position: absolute;
          right: 11px;
          top: 9px;
          width: 6px;
        }
      }
    }

    &__coming-soon {
      opacity: 0.6;

      a {
        &:hover {
          .card__body {
            box-shadow:
              0 3px 15px 2px rgba($color-black, 0.05),
              0 1px 1px rgba($color-black, 0.02),
              0 0 0 3px rgba($color-black, 0.1);
            transform: translateY(0);
          }
        }
      }

      .card__label {
        position: relative;
        h6 {
          padding: 3px 13px;

          &:after {
            background: transparent;
          }
        }
      }
    }

    &__body {
      align-items: center;
      background: $color-white;
      border-radius: 8px;
      box-shadow:
        0 3px 15px 2px rgba($color-black, 0.05),
        0 1px 1px rgba($color-black, 0.02),
        0 0 0 3px rgba($color-black, 0.1);
      display: flex;
      flex-direction: column;
      justify-content: center;
      transition:
        background $transition,
        box-shadow $transition,
        transform $transition;
    }

    &__headline,
    &__content {
      margin-left: 30px;
      margin-right: 30px;
      text-align: center;
    }

    &__headline {
      padding-bottom: 6px;
      padding-top: 32px;

      h3 {
        clear: both;
        color: $color-black;
        font-size: 26px;
        font-weight: 700;
        letter-spacing: -0.01em;
        line-height: 31px;
        margin-left: auto;
        margin-right: auto;
        text-decoration: underline;
        text-decoration-thickness: 2px;
        transition: color $transition;
      }
    }

    &__content {
      padding-bottom: 35px;

      p {
        clear: both;
        color: $color-grey-5;
        font-size: 18px;
        line-height: 23px;
        margin-left: auto;
        margin-right: auto;
        transition: color $transition;
      }

      ul {
        font-size: 18px;
        line-height: 23px;
        list-style-type: disc;
        margin-left: auto;
        margin-right: auto;
        text-align: left;

        li {
          color: $color-grey-5;
          margin-bottom: 0.5em;
        }
      }
    }
  }

  @media (min-width: 768px) {
    &__container {
      grid-template-columns: repeat(2, 1fr);
      gap: 30px;

      &.card__fullwidth {
        .card__body {
          flex-direction: row;

          > div {
            width: 45%;
          }

          img {
            max-width: 50%;
            width: 45% !important;
            margin: 0;
          }
        }
      }
    }

    .card {
      height: 30vw;
      max-height: 150px;

      a,
      &__body {
        height: 100%;
        position: absolute;
      }
    }
  }

  @media (min-width: 1024px) {
    &__container {
      grid-template-columns: repeat(3, 1fr);
      margin-left: 60px;
      margin-right: 60px;
    }
  }
}

